# email-detection-system

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
gmail_adds_on/: Code.gs  appsscript.json
ml/: phishing_detector_v1.pkl
ml/notebooks/: experiments.ipynb
src/: api.py  logging_config.py  main.py  models.py  utils.py
src/detection/: classifier.py  detector.py  heuristics.py  interface.py  parser.py  resolver.py
src/detection/classifiers/: __init__.py  heuristics.py  ml.py
tests/: conftest.py  test_api.py  test_classifier.py  test_detector.py  test_heuristics.py  test_heuristics_classification.py  test_hybrid_resolver.py  test_ml_model.py  test_parser.py  test_setup.py  test_validation.py
