[project]
name = "email-detection-system"
version = "0.1.0"
description = "A modular phishing detection system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "joblib>=1.5.3",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detection", "src/models.py"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["ml/notebooks"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

